--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <td>
           <h1>Arden Mendonca</h1>
           <p>Expert coder and a Billionare</p>
-          <p>Smart dedicated desiplined</p>
+          <p>Smart dedicated desciplined</p>
         </td>
       </tr>
     </table>
@@ -49,7 +49,7 @@
     </table>
     <hr />
     <a
-      href="contact.h
+      href="conatct.h
     "
       >Contact me</a
     >
